finalized mobile optimization

--- a/Emails/password_reset.html
+++ b/Emails/password_reset.html
@@ -75,10 +75,10 @@
             <tbody>
                 <tr>
                 <td style="font-size: 32px; padding: 20px; color:#b0bc22;"><!-- Header --><b>Your request has been received</b><br></td></tr><tr><td style="padding: 20px; font-family: sans-serif;"><p style="margin-top:0; margin-bottom:10px; font-size:12px; color:#323232;"><b>Hello!</b></p>
-                <p style="margin-top:0; margin-bottom:10px; font-size:12px; color:#323232;">Thank you for shopping at TrueFabrications. To change your password, please click <a href="https://checkout.na1.netsuite.com/c.1315461/checkout/index.ssp?is=checkout&n=2&passwdret=T&passretget=T&doit=T&dt=1420508477734&e=nikeshjpatel@gmail.com&cb=87c3095ca3d9824934aae4072a11ed01219e25cf">here</a> or carefully copy and paste the below URL into a browser window:</p>
+                <p style="margin-top:0; margin-bottom:10px; font-size:12px; color:#323232;">Thank you for shopping at TrueFabrications. To change your password, please click <a href="{1}">here</a> or carefully copy and paste the below URL into a browser window:</p>
                 <br>
                 <br>
-                https://checkout.na1.netsuite.com/c.1315461/checkout/index.ssp?is=checkout&amp;n=2&amp;passwdret=T&amp;passretget=T&amp;doit=T&amp;dt=1420508477734&amp;e=nikeshjpatel@gmail.com&amp;cb=87c3095ca3d9824934aae4072a11ed01219e25cf
+                {1}
                 <br>
                 <p><br></p><p>Cheers!<br>
                 True Fabrications
