--- a/Landing Pages/catalog.html
+++ b/Landing Pages/catalog.html
@@ -125,7 +125,7 @@
     <div style="width: 90%; margin: 0 auto; margin-top: 5%; margin-bottom: 5%;">
     <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../HOST_2014.pdf"><img src="/assets/images/content/CD_pages/true_catalog_host14.png" /></a>
     <h4>Host 2014 Catalog</h4>
-    <p>Spring has sprung at True Fabrications! Check out over 200 new products, curated collections, and everyday essentials in the 2015 Spring Catalog.</p>
+    <p>We know that everything can be done better. So that’s what we’re doing. Shop the award-winning collection in the 2014 Summer Catalog.</p>
     <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../HOST_2014.pdf">view it now</a> |
     <a href="http://catalog.truefabrications.com/pdf/HOST_2014.pdf">download</a> |
     <a href="http://www.truefabrications.com/requestcatalog.asp">request a copy</a>
