--- a/Landing Pages/faq.html
+++ b/Landing Pages/faq.html
@@ -15,16 +15,15 @@
 </style>
 <body>
 <div class="tfBodyText">
+<!-- Sidebar -->
   <div id="sidebar">
     <ul>
       <a href="/faq"><li>FAQ</li></a>
-      <li><span class="seperator"></span></li>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
-      <li><span class="seperator"></span></li>
       <a href="/returns"><li>Returns & Exchanges</li></a>
-      <li><span class="seperator"></span></li>
     </ul>
   </div>
+<!-- End Sidebar -->
   <section id="faq">
 
   <h2 style="margin-bottom: 0px;">Frequently Asked Questions</h2>
@@ -40,7 +39,7 @@
   <p>We're set up to ship in case-packs to keep your shipping cost as low as possible, as well as to prevent damage to your items.</p>
 
   <h6>Why can't I break case-pack sizes on glassware?</h6>
-  <p>Sadly, glass will try to break in transit even when it's carefully packed.  So we ship in inner cartons to reduce that breakage.  We don't want you to receive a smashed wine glass with your order, and we're guessiong you don't want that either.  Food and bags also fare poorly in shipping outside of their case-packs.</p>
+  <p>Sadly, glass will try to break in transit even when it's carefully packed.  So we ship in inner cartons to reduce that breakage.  We don't want you to receive a smashed wine glass with your order, and we're guessing you don't want that either.  Food and bags also fare poorly in shipping outside of their case-packs.</p>
 
   <h6>What does "bulk" mean?</h6>
   <p>Bulk doesn't mean a large volume: bulk products are simply shipped without any sort of retail packaging like boxes or blister cards.  These items generally just come with a barcode sticker or hangtag.</p>
@@ -87,7 +86,7 @@
   <p>"Turns out my customers don't like this item as much as I do."</p>
   <p>"You have a new product I like even better."</p>
   <p>"A tornado delayed my shipment and I didn't sell as many as I expected."</p>
-  <p>"because it's cloudy and also a Tuesday."</p>
+  <p>"Because it's cloudy and also a Tuesday."</p>
   <p>"I don't really have a reason."</p>
   <p>We accept returns and exchanges at any time with no questions asked.  And if a product doesn't sell at your store, for any reason, we'll buy it back and replace it with something that will.  Believe us when we say it: your satisfaction is our highest priority.</p>
 
