--- a/Landing Pages/shipping_and_deliveries.html
+++ b/Landing Pages/shipping_and_deliveries.html
@@ -14,16 +14,15 @@
 
 <body>
 <div class="tfBodyText">
+<!-- Sidebar -->
   <div id="sidebar">
     <ul>
       <a href="/faq"><li>FAQ</li></a>
-      <li><span class="seperator"></span></li>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
-      <li><span class="seperator"></span></li>
       <a href="/returns"><li>Returns & Exchanges</li></a>
-      <li><span class="seperator"></span></li>
     </ul>
   </div>
+<!-- End Sidebar -->
   <section id="shipping">
 
   <h2>Shipping & Deliveries</h2>
