--- a/Landing Pages/who.html
+++ b/Landing Pages/who.html
@@ -23,23 +23,14 @@
 	</nav>
 </div>
 <!-- End Header -->
-<div class="tfPanelsContainer">
-	<div class="tfThreePanels">
-		<img src="/assets/images/content/CD_pages/true_who_1.png" />
-	</div>
-  <div class="tfThreePanels">
-    <img src="/assets/images/content/CD_pages/true_who_2.png" />
-  </div>
-  <div class="tfThreePanels">
-    <img src="/assets/images/content/CD_pages/true_who_3.png" />
-  </div>
-  <span class="stretch"></span>
-</div>
-<div style="width: 80%; min-width: 300px; margin: auto;">
-<h3 style="font-size: 1.5em; text-align: center; color: #666666;"><span style="margin-bottom:0px;">we are people</span><br /><em>you can count on</em></h3>
-<p style="text-align: center">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
-<p style="text-align: center">To top it all off, everything we do is backed by our <B>100% Satisfaction Guarantee</B>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
+
+<div style="width: 50%; min-width: 300px; margin: auto;">
+<h3 style="font-size: 1.5em; text-align: center; color: #666666;"><span style="margin-bottom:0px;">Welcome to True</h3>
+<p style="text-align: justify;">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
+<p style="text-align: justify;">To top it all off, everything we do is backed by our <B>100% Satisfaction Guarantee</B>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
 </p>
+<h3 style="font-size: 1.5em; text-align: center; color: #666666;">Our Mission</h3>
+<p style="text-align: justify;">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
 </div>
 
 
