checking in as I swap pages over to all having the side nav

--- a/Landing Pages/contact.html
+++ b/Landing Pages/contact.html
@@ -149,7 +149,7 @@ F A B R I C A T I O N S
 <h3>Customer Service</h3>
 <p>Want to track your order? We’ll make it happen. Confused about something? We’ll figure it out. Need a problem resolved? We’ll find a way to fix it.</p>
 
-<div class="tfPanelsContainer">
+<div class="tfPanelsContainer mobileDisappear">
   <div class="tfThreePanels">
     <h1>Email<br />Support</h1>
     <p>We will reply <br />as soon as possible<br /></p>
