--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -29,18 +29,19 @@
 </head>
 <body>
 <div class="tfBodyText">
-<section id="guarantee">
 
-<!-- About Header -->
-<div class="aboutHeader">
-  <h2 style="text-align: center;"><a href="/about">About True Fabrications</a></h2>
-  <nav>
+<!-- Sidebar -->
+  <nav id="sidebar">
     <ul>
-    <a href="/who" style="color:#BBBBBB;"><li class="whoLink">WHO WE ARE</li></a><a href="/guarantee"><li class="guaranteeLink" style="margin-left: 10%; margin-right: 10%;">OUR GUARANTEES</li></a><a href="/about-brands" style="color:#BBBBBB;"><li class="brandsLink">OUR BRANDS</li></a>
+      <a href="/faq"><li>FAQ</li></a>
+      <a href="/shipping"><li>Shipping & Deliveries</li></a>
+      <a href="/returns"><li>Returns & Exchanges</li></a>
+      <a href="/about"><li>Who We Are</li></a>
     </ul>
   </nav>
-</div>
-<!-- End Header -->
+<!-- End Sidebar -->
+
+<section id="guarantee">
 
 
 <div class="tfPanelsContainer">
