--- a/Landing Pages/merchandising.html
+++ b/Landing Pages/merchandising.html
@@ -69,7 +69,7 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
 </div>
-<div class="tfPanelsContainer">
+<div class="tfPanelsContainer mobileDisappear">
 	<div class="tfThreePanels">
     <a href="/Merchandising/Counter-Top-Displays"><img src="/assets/images/content/CD_pages/true_merchandising_counterdisplay.png" /></a>
     <h4>Counter Displays</h4>
