--- a/Landing Pages/who.html
+++ b/Landing Pages/who.html
@@ -8,28 +8,25 @@
 </head>
 
 <body>
-
-<!-- Body Section -->
 <div class="tfBodyText">
+<!-- Sidebar -->
+  <nav id="sidebar">
+    <ul>
+      <a href="/faq"><li>FAQ</li></a>
+      <a href="/shipping"><li>Shipping & Deliveries</li></a>
+      <a href="/returns"><li>Returns & Exchanges</li></a>
+      <a href="/about"><li>Who We Are</li></a>
+    </ul>
+  </nav>
+<!-- End Sidebar -->
+
 <section id="who">
-
-<!-- About Header -->
-<div class="aboutHeader">
-	<h2 style="text-align: center;"><a href="/about">About True Fabrications</a></h2>
-	<nav>
-		<ul>
-		<a href="/who"><li class="whoLink">WHO WE ARE</li></a><a href="/guarantee" style="color:#BBBBBB;"><li class="guaranteeLink" style="margin-left: 10%; margin-right: 10%;">OUR GUARANTEES</li></a><a href="/about-brands" style="color:#BBBBBB;"><li class="brandsLink">OUR BRANDS</li></a>
-		</ul>
-	</nav>
-</div>
-<!-- End Header -->
-
 <div style="width: 50%; min-width: 300px; margin: auto;">
-<h3 style="font-size: 1.5em; text-align: center; color: #666666;"><span style="margin-bottom:0px;">Welcome to True</h3>
+<h3><span style="margin-bottom:0px;">Welcome to True</h3>
 <p style="text-align: justify;">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
 <p style="text-align: justify;">To top it all off, everything we do is backed by our <B>100% Satisfaction Guarantee</B>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
 </p>
-<h3 style="font-size: 1.5em; text-align: center; color: #666666;">Our Mission</h3>
+<h3>Our Mission</h3>
 <p style="text-align: justify;">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
 </div>
 
