--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -8,17 +8,17 @@
 <style type="text/css">
 
 .tfFourPanels img{
-  width: 80%;
+  width: 95%;
 }
 
 .tfFourPanels p{
-  padding-left: 10%;
-  width: 80%;
+  padding-left: 2.5%;
+  width: 95%;
 }
 
 .tfFourPanels h3{
-  padding-left: 10%;
-  width: 80%;
+  padding-left: 2.5%;
+  width: 95%;
 }
 
 
@@ -30,8 +30,9 @@
 <body>
 <div class="tfBodyText">
 
+
 <!-- Sidebar -->
-  <nav id="sidebar">
+  <nav class="sidebar">
     <ul>
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
@@ -42,29 +43,27 @@
 <!-- End Sidebar -->
 
 <section id="guarantee">
-
-
 <div class="tfPanelsContainer">
-	<div class="tfFourPanels">
-    <img src="/assets/images/content/CD_pages/BestPrice_Icon.png" />
-    <h3>Best Price</h3>
-    <p>We guarantee our customers the best of the best, at the best price on the market.  If you see the same product offered anywhere else for less, that's the price you'll pay with us.</p>
-	</div>
-	<div class="tfFourPanels">
-    <img src="/assets/images/content/CD_pages/FastShipping_Icon.png" />
-    <h3>Same-Day Shipping</h3>
-    <p>We strive to make ordering from True Fabrications as fast and easy as possible.  Place your order before 3:00 PM Pacific Time and we&#39ll ship it the same day.</p>
-	</div>
-	<div class="tfFourPanels">
-    <img src="/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
-    <h3>Free Backorder Shipping</h3>
-    <p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock, we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
-	</div>
-	<div class="tfFourPanels">
-    <img src="/assets/images/content/CD_pages/NoMinimums_Icon.png" />
-    <h3>No Minimums</h3>
-    <p>Our no minimum policy gives customers the flexibility to try out new or popular products online 24 hours a day.</p>
-	</div>
+  <div class="tfFourPanels">
+    <img src="/assets/images/content/CD_pages/true_guarantees_bestprice.png" />
+    <h4>Best Price</h4>
+    <p>Go Ahead, shop around! If you find a better price, we'll match it.</p>
+  </div>
+  <div class="tfFourPanels">
+    <img src="/assets/images/content/CD_pages/true_guarantees_satisfaction.png" />
+    <h4>100% Satisfaction</h4>
+    <p>Not satisfied? We offer returns or exchanges for ANY reason.</p>
+  </div>
+  <div class="tfFourPanels">
+    <img src="/assets/images/content/CD_pages/true_guarantees_samedayship.png" />
+    <h4>Same-Day Shipping</h4>
+    <p>All orders placed before 3:30 PM (PST) will ship out the same day!</p>
+  </div>
+  <div class="tfFourPanels">
+    <img src="/assets/images/content/CD_pages/true_guarantees_nominimums.png" />
+    <h4>No Minimums</h4>
+    <p>So you have the flexibility to try out our new and best-selling products.</p>
+  </div>
   <span class="stretch"></span>
 </div>
 </section>
