--- a/Landing Pages/merchandising.html
+++ b/Landing Pages/merchandising.html
@@ -22,9 +22,13 @@ F A B R I C A T I O N S
 .tfPanelsContainer
 {
   text-size: 1em;
-	margin-top: 10px; 
-	padding-top: 20px; 
-	padding-bottom: 10px;
+  margin-top: 10px; 
+  padding-top: 20px; 
+  padding-bottom: 10px;
+}
+
+.tfPanelsContainer img {
+  margin-bottom: 5%;
 }
 
 .tfThreePanels {
@@ -70,22 +74,16 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
 </div>
 <div class="tfPanelsContainer mobileDisappear">
-	<div class="tfThreePanels">
+  <div class="tfThreePanels">
     <a href="/Merchandising/Counter-Top-Displays"><img src="/assets/images/content/CD_pages/true_merchandising_counterdisplay.png" /></a>
-    <h4>Counter Displays</h4>
-    <p>American Apparel literally quinoa wolf, lomo PBR&B 90's fanny pack Portland mustache. VHS polaroid narwhal direct trade. Literally leggings asymmetrical sartorial tote bag. Pickled Thundercats authentic farm-to-table before they sold out.</p>
     <a href="/Merchandising/Counter-Top-Displays"><button class="truefabButton1" style="background: #92D9F8;">Shop Counter Displays</button></a>
-	</div>
+  </div>
   <div class="tfThreePanels">
     <a href="/Merchandising/Floor-Displays"><img src="/assets/images/content/CD_pages/true_merchandising_floordisplay.png" /></a>
-    <h4>Floor Displays</h4>
-    <p>American Apparel literally quinoa wolf, lomo PBR&B 90's fanny pack Portland mustache. VHS polaroid narwhal direct trade. Literally leggings asymmetrical sartorial tote bag. Pickled Thundercats authentic farm-to-table before they sold out.</p>
     <a href="/Merchandising/Floor-Displays"><button class="truefabButton1" style="background: #28c0d7;">Shop Floor Displays</button></a>
   </div>
   <div class="tfThreePanels">
     <a href="/Merchandising/Aisle-Displays"><img src="/assets/images/content/CD_pages/true_merchandising_aisledisplay.png" /></a>
-    <h4>Aisle Displays</h4>
-    <p>American Apparel literally quinoa wolf, lomo PBR&B 90's fanny pack Portland mustache. VHS polaroid narwhal direct trade. Literally leggings asymmetrical sartorial tote bag. Pickled Thundercats authentic farm-to-table before they sold out.</p>
     <a href="/Merchandising/Aisle-Displays"> <button class="truefabButton1" style="background: #b8cd32;">Shop Aisle Displays</button></a>
   </div>
     <span class="stretch"></span>
