--- a/Landing Pages/returns.html
+++ b/Landing Pages/returns.html
@@ -28,7 +28,7 @@
 <body>
 <div class="tfBodyText">
 <!-- Sidebar -->
-  <div id="sidebar">
+  <div class="sidebar">
     <ul>
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
@@ -39,7 +39,7 @@
   <section id="returns">
 
   <h2>Returns & Exchanges</h2>
-  <p>We dedicate ourselves to the customer experience with a 100% Satisfaction Guarantee unmatched in the industry.  If your product was damaged in shipping, has a quality issue, or isn't selling as quickly as you'd hoped - even if you simply changed your  mind about it - we'll take it back without question and replace it with something better.  Just <a href="https://checkout.na1.netsuite.com/c.1315461/checkout/index.ssp?is=login&amp;n=2&amp;login=T&amp;ck=AAAAABkDAl1T-g2z&amp;vid=RaSm0usCAuYb7zFw&amp;cktime=131871&amp;cart=940&amp;_od=dGYucHJvZHVjdGlvbi5uYTEubmV0c3VpdGVzdGFnaW5nLmNvbQ**&amp;fragment=login-register" data-touchpoint="login" data-hashtag="login-register">log in</a> to your account and fill out the return from and one of our team members will be in touch with you shortly.  If immediate assistance is more convenient for you, please feel free to <a href="#" onclick="window.open('http://a3.websitealive.com/1297/rRouter.asp?groupid=1297&amp;websiteid=0&amp;departmentid=1581&amp;dl='+escape(document.location.href),'','width=400,height=400'); return false;">chat</a> with us live or give us a call at 800.750.8783.</p>
+  <p>We dedicate ourselves to the customer experience with a 100% Satisfaction Guarantee unmatched in the industry.  If your product was damaged in shipping, has a quality issue, or isn't selling as quickly as you'd hoped - even if you simply changed your  mind about it - we'll take it back without question and replace it with something better.  Just <a href="https://checkout.na1.netsuite.com/c.1315461/checkout/index.ssp?is=login&n=2&login=T&ck=AAAAABkDAl1T-g2z&vid=RaSm0usCAuYb7zFw&cktime=131871&cart=940&_od=dGYucHJvZHVjdGlvbi5uYTEubmV0c3VpdGVzdGFnaW5nLmNvbQ**&fragment=login-register" data-touchpoint="login" data-hashtag="login-register">log in</a> to your account and fill out the return from and one of our team members will be in touch with you shortly.  If immediate assistance is more convenient for you, please feel free to <a href="#" onclick="window.open('http://a3.websitealive.com/1297/rRouter.asp?groupid=1297&websiteid=0&departmentid=1581&dl='+escape(document.location.href),'','width=400,height=400'); return false;">chat</a> with us live or give us a call at 800.750.8783.</p>
   <p>Please note that we take the quality of our products very seriously.  If you received a product with damage or a quality issue, we want to hear about it.  If possible, please attach a picture below to assist us in properly addressing the issue.</p>
   <br />
 <h2>We Make Returns Easy</h2>
