--- a/Landing Pages/shipping_and_deliveries.html
+++ b/Landing Pages/shipping_and_deliveries.html
@@ -15,7 +15,7 @@
 <body>
 <div class="tfBodyText">
 <!-- Sidebar -->
-  <div id="sidebar">
+  <div class="sidebar">
     <ul>
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
