--- a/Landing Pages/shipping_and_deliveries.html
+++ b/Landing Pages/shipping_and_deliveries.html
@@ -15,13 +15,20 @@
 <body>
 <div class="tfBodyText">
 <!-- Sidebar -->
-  <div class="sidebar">
+  <nav class="sidebar">
+    <h5>About Us</h5>
+    <ul>
+      <a href="/who"><li>Our Company</li></a>
+      <a href="/about-brands"><li>Our Brands</li></a>
+      <a href="/guarantee"><li>Our Guarantees</li></a>   
+    </ul>
+    <h5>Help & Info</h5>
     <ul>
       <a href="/faq"><li>FAQ</li></a>
-      <a href="/shipping"><li>Shipping & Deliveries</li></a>
+      <a style="color: #B0BC22;" href="/shipping"><li style="font-size: 1em; font-weight: 500; letter-spacing: .05em">Shipping & Deliveries</li></a>
       <a href="/returns"><li>Returns & Exchanges</li></a>
     </ul>
-  </div>
+  </nav>
 <!-- End Sidebar -->
   <section id="shipping">
 
