--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -33,11 +33,17 @@
 
 <!-- Sidebar -->
   <nav class="sidebar">
+    <h5>About Us</h5>
+    <ul>
+      <a href="/who"><li>Our Company</li></a>
+      <a href="/about-brands"><li>Our Brands</li></a>
+      <a style="color: #B0BC22;" href="/guarantee"><li style="font-size: 1em; font-weight: 500; letter-spacing: .05em">Our Guarantees</li></a>   
+    </ul>
+    <h5>Help & Info</h5>
     <ul>
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
       <a href="/returns"><li>Returns & Exchanges</li></a>
-      <a href="/about"><li>Who We Are</li></a>
     </ul>
   </nav>
 <!-- End Sidebar -->
