--- a/Landing Pages/returns.html
+++ b/Landing Pages/returns.html
@@ -11,30 +11,26 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 
-#returns {
-  max-width: 800px; float: left; margin-left: 240px;
-}
 
-@media screen and (max-width: 760px) {
-
-  #returns {
-    width: auto;
-    margin-left: 0px;
-  }
-
-}
 
 </style>
 <body>
 <div class="tfBodyText">
 <!-- Sidebar -->
-  <div class="sidebar">
+  <nav class="sidebar">
+    <h5>About Us</h5>
+    <ul>
+      <a href="/who"><li>Our Company</li></a>
+      <a href="/about-brands"><li>Our Brands</li></a>
+      <a href="/guarantee"><li>Our Guarantees</li></a>   
+    </ul>
+    <h5>Help & Info</h5>
     <ul>
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
-      <a href="/returns"><li>Returns & Exchanges</li></a>
+      <a style="color: #B0BC22;" href="/returns"><li style="font-size: 1em; font-weight: 500; letter-spacing: .05em">Returns & Exchanges</li></a>
     </ul>
-  </div>
+  </nav>
 <!-- End Sidebar -->
   <section id="returns">
 
