--- a/Landing Pages/who.html
+++ b/Landing Pages/who.html
@@ -11,11 +11,11 @@
 <div class="tfBodyText">
 <!-- Sidebar -->
   <nav class="sidebar">
-  	<h5>About Us</h5>
+    <h5>About Us</h5>
     <ul>
-      <a href="/about"><li>Our Company</li></a>
-      <a href="/about"><li>Our Brands</li></a>
-      <a href="/about"><li>Our Guarantees</li></a>   
+      <a style="color: #B0BC22;" href="/who"><li style="font-size: 1em; font-weight: 500; letter-spacing: .05em">Our Company</li></a>
+      <a href="/about-brands"><li>Our Brands</li></a>
+      <a href="/guarantee"><li>Our Guarantees</li></a>   
     </ul>
     <h5>Help & Info</h5>
     <ul>
